--- a/zszy/pages/home/index.wxml
+++ b/zszy/pages/home/index.wxml
@@ -54,4 +54,11 @@
       <view class='content-content-content'>暂未绑定一卡通</view>
     </view>
   </view>
+    <dialog id='dialog' 
+        title='登录提示' 
+        content='小程序需要您的授权才能提供更好的服务哦' 
+        confirmText='知道了'
+        bind:confirmEvent='confirmEvent'
+        bind:bindGetUserInfo='bindGetUserInfo'>
+  </dialog>
 </view>
