--- a/zszy/pages/bind/index.wxss
+++ b/zszy/pages/bind/index.wxss
@@ -1,4 +1,5 @@
 /**start.wxss**/
+@import "../../common/lib/weui.wxss";
 page{
   font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
   font-size: 10pt;
@@ -60,7 +61,7 @@ page{
 }
 .title{
   position: absolute;
-  top: 30rpx;
+  /* top: 30rpx; */
   left: 50%;
   width: 600rpx;
   height: 200rpx;
@@ -98,7 +99,7 @@ page{
   position: absolute;
   z-index: 2;
   left: 50%;
-  bottom: 200rpx;
+  bottom: 280rpx;
   width: 160rpx;
   height: 160rpx;
   margin-left: -80rpx;
@@ -119,7 +120,7 @@ page{
   position: absolute;
   z-index: 3;
   right: 0;
-  bottom: 0;
+  bottom: 80rpx;
   opacity: 0.725;
   height: 260rpx;
   width: 2250rpx;
@@ -160,7 +161,7 @@ page{
   color: #fff;
   text-align: center;
   border-radius: 100rpx;
-  margin: 40% 20%;
+  margin: 40rpx 20%;
 }
 .confirm-btn:active {
   opacity: .8;
@@ -177,3 +178,35 @@ page{
   padding: 30rpx;
   text-align: center;
 }
+.form{
+  padding: 0 100rpx;
+}
+.form-item{
+  display: flex;
+  align-content: center;
+  align-items: center;
+  padding-bottom: 10rpx;
+}
+.form-item-label{
+  width: 150rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  text-align: center;
+  font-size: 30rpx;
+  padding-bottom: 10rpx;
+}
+.form-item-content{
+  height: 100rpx;
+  line-height: 100rpx;
+  font-size: 30rpx;
+}
+.radio label{
+  margin-right: 50rpx;
+}
+.weui-input{
+  border-bottom: 1px #69C3AA solid;
+  height: 80rpx;
+  line-height: 80rpx;
+  width: 400rpx;
+}
+input:focus{color:#69C3AA}
