--- a/zszy/pages/my/index.wxml
+++ b/zszy/pages/my/index.wxml
@@ -3,7 +3,6 @@
 	<view class="userinfo">
 		<image wx:if="{{userInfo && userInfo.avatarUrl}}" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
 		<text class="userinfo-nickname">{{ userInfo.nickName }}</text>
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> </button>
 	</view>
   <view class='content-list'>
    <view class='list-item'>
@@ -23,6 +22,14 @@
     关于我们
   </view>
   <view class="bind-btn" >
-    <button type="warn" bindtap="relogin">立即绑定</button>
+    <button type="primary" bindtap="bind" class='bind-btn'>立即绑定</button>
   </view>
+  <authorize id='dialog1' 
+        hidden="{{!hasAuthorize}}"
+        title='登录提示' 
+        content='小程序需要您的授权才能提供更好的服务哦' 
+        confirmText='知道了'
+        bind:confirmEvent='confirmEvent'
+        bind:bindGetUserInfo='bindGetUserInfo'>
+  </authorize>
 </view>
